# ScratchEngine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  build.py  conanfile.py  prebuild.py  run_release.py
src/: common.h  d3d12_command.cpp  d3d12_command.h  engine.cpp  engine.h  helper.h  main.cpp
